VersionList::Row: Fix tooltip alignment in narrow viewport

--- a/app/components/version-list/row.module.css
+++ b/app/components/version-list/row.module.css
@@ -161,9 +161,11 @@
     }
 
     @media only screen and (max-width: 750px) {
-        > * {
-            display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
 
+        > * {
             &:not(:first-child) {
                 margin-left: 0;
                 margin-top: 10px;
